--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.4.2
   flutter_svg: ^2.0.14
   http: ^1.2.2
+  intl: any
   lottie: ^3.1.3
   path: ^1.9.0
   sqflite: ^2.4.1
