--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true 
   assets:
     - assets/images/star_icon.svg
     - assets/images/alternative_star_icon.svg
