--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ flutter:
     - assets/images/grimorio_empty.svg
     - assets/images/grimorio_1152.png
     - assets/images/grimorio_titulo_1152.png
+    - assets/images/grimorio_titulo_1152-en.png
+    - assets/images/grimorio_titulo_1152-es.png
     - assets/carousel/
     - assets/animations/
     - assets/images/flags/
